--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
+            
           </nav>
 
     </div>
@@ -47,8 +48,21 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark">
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                    </li>
+                      <label for="city">Enter a City</label>
+                      <input type="text" placeholder="roswell" id="city" />
+                  </li>
+                  <li class="list-group-item bg-dark">
+                    <label for="state">Enter a State</label>
+                    <input type="text" placeholder="ca" id="state" />
+                </li>
+                <li class="list-group-item bg-dark">
+                  <label for="country">Enter a Country</label>
+                  <input type="text" placeholder="us" id="country" />
+              </li>
+              <li class="list-group-item bg-dark">
+                <label for="shape">Enter a Shape</label>
+                <input type="text" placeholder="circle" id="shape" />
+            </li>
                 </ul>
               </form>
 
